--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -2,7 +2,7 @@
 #log4j.rootLogger=ERROR, CATALINA
 log4j.rootLogger=INFO,CATALINA,CONSOLE
 log4j.appender.CATALINA=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.CATALINA.file=${catalina.base}/logs/api.log
+log4j.appender.CATALINA.file=${LOGS_DIR}/api.log
 log4j.appender.CATALINA.encoding=UTF-8
 log4j.appender.CATALINA.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.CATALINA.MaxBackupIndex=7
@@ -11,7 +11,7 @@ log4j.appender.CATALINA.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
 log4j.appender.CATALINA.append=true
 
 log4j.appender.ERROR=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ERROR.file=${catalina.base}/logs/api.log
+log4j.appender.ERROR.file=${LOGS_DIR}/api.log
 log4j.appender.ERROR.encoding=UTF-8
 log4j.appender.ERROR.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.ERROR.MaxBackupIndex=7
